--- a/src/components/mmo_0/frontend_html/style-detail.css
+++ b/src/components/mmo_0/frontend_html/style-detail.css
@@ -383,7 +383,6 @@ p.danh-price {
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     padding: 5px;
-    height: 35px;
     outline: none;
     margin-top: 6px;
     font-size: 12px;
@@ -412,4 +411,106 @@ p.danh-price {
 }
 .blx{
     position: absolute;
+}
+.w-btn-mua{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    text-align: center; 
+    padding: 2px;
+}
+.btn-mua{
+    color: #FFEB3B;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    background-color: #145ee1;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    padding: 6px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -ms-touch-action: manipulation;
+    user-select: none;
+}
+.btn-mua:hover{
+    background-color: #007ddf;
+}
+.btn-mua>span{
+    margin-right: 5px;
+    font-size: 17px;
+}
+.btn-mua>span::before{
+    color: #FFEB3B;
+}
+.check-kt {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0px;
+    left: 0px;
+    background-color: #717171cc;
+    z-index: 999999;
+}
+.wrap-check-kt {
+    padding: 2vh 0px;
+    height: 100vh;
+    overflow: scroll;
+}
+.dev-1{
+    max-width: 500px !important;
+}
+.dev-1>div{
+    background-color: white;
+    padding: 5px;
+    border-radius: 3px;
+}
+.img-pp-1 {
+    text-align: center;
+    margin: 12px;
+}
+.img-pp-1>img{
+    border: 1px solid #bfb6b6;
+    max-width: 289px;
+}
+.active b{
+    color:sandybrown ;
+}
+.dcn>span:nth-child(1){
+    color: #145ee1;
+}
+.dcn>span:nth-child(2){
+    color: green;
+}
+.btn-control{
+    margin-top: 8px;
+    border-top: 1px dotted #939090;
+    padding-top: 9px;
+}
+.tt-check>span {
+    position: absolute;
+    right: -2px;
+    display: block;
+    top: -3px;
+    background-color: brown;
+    color: white;
+    padding: 3px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.tt-check>span:hover{
+    background-color: #d73838;
+}
+.dv1:hover{
+    background-color: #dd7f17;
+}
+.dv2:hover{
+    background-color: #144293;
 }
