--- a/src/components/mmo_0/frontend_html/detail-v2.html
+++ b/src/components/mmo_0/frontend_html/detail-v2.html
@@ -27,8 +27,7 @@
     <meta name="msapplication-TileImage"
         content="https://anbinhnew.com/wp-content/uploads/2022/06/logo-an-binh-noi-that-zshare.jpg">
 
-    <script defer="defer"
-        src="https://anbinhnew.com/wp-content/plugins/qc_landingpage/frontend/src/lazyload.js"></script>
+    <script defer="defer" src="https://anbinhnew.com/wp-content/plugins/qc_landingpage/frontend/src/lazyload.js"></script>
     <link href="./style-comom.css" rel="stylesheet">
     <link href="./style-detail.css" rel="stylesheet">
     <link href="./icon/style.css" rel="stylesheet">
@@ -1036,25 +1035,25 @@
                                 <div class="item"><img itemprop="image"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02" title="Giường sắt đơn Hoàng Gia - HG02"
-                                        class="d-block w-100" /><div class="w-btn-mua"><button class="btn-mua"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        class="d-block w-100" /><div class="w-btn-mua"><button class="btn-mua" onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02-h2.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 1" /><div class="w-btn-mua"><button class="btn-mua"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 1" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02-h2.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-ngu-hoang-gia.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 2" /><div class="w-btn-mua"><button class="btn-mua"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 2" /><div class="w-btn-mua"><button class="btn-mua" onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-ngu-hoang-gia.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2022/06/giuong-sat-my-thuat-hg01.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 3" /><div class="w-btn-mua"><button class="btn-mua"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 3" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2022/06/giuong-sat-my-thuat-hg01.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h1.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 4" /><div class="w-btn-mua"><button class="btn-mua"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 4" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h1.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h2.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 5" /><div class="w-btn-mua"><button class="btn-mua"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 5" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h2.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
                                 <div class="item"><img class="owl-lazy"
                                         data-src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 6" /><div class="w-btn-mua"><button class="btn-mua"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 6" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
                             </div>
                             <div class="product owl-carousel dot slideProduct-dot">
                                 <div>
@@ -1402,7 +1401,7 @@
                             class="aml-text-content aml-tooltiptext">Facebook Messenger</span></li>
                 </ul>
             </div>
-            
+
             <div id="popup-cart" class="popup-cart">
                 <div class="pp-content">
                     <div>
@@ -1449,78 +1448,54 @@
                 </div>
                 <div class="dimer-popup" style=" width: 100%; height: 100%; "></div>
             </div>
-            
-            <div class="check-kt">
-                <div class="wrap-check-kt">
-                    <div class="container dev-1">
-                        <div>
-                            <div class="tt-check re">Mẫu đã chọn:
-                                <span>Đóng</span>
-                            </div>
-                            <div class="img-pp-1">
-                                <img src="https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02.jpg" width="50%">
-                                <div class="dcn">Đã chọn: <span>ngang 1m x dài 2m x cao 30cm</span> - giá: <span>1.250.0000đ</span></div>
-                            </div>
-                            <div>Chọn loại sản phẩm:</div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <button class="btnz ">ngang 1m x dài 2m x sâu 34cm<span class="showpz">giá: <b>1.150.000₫</b></span></button>
-                                </div>
-                                <div class="col-6">
-                                    <button class="btnz active">ngang 1m x dài 2m x sâu 34cm<span class="showpz">giá: <b>1.150.000₫</b></span></button>
-                                </div>
-                                <div class="col-6">
-                                    <button class="btnz ">ngang 1m x dài 2m x sâu 34cm<span class="showpz">giá: <b>1.150.000₫</b></span></button>
-                                </div>
-                                <div class="col-6">
-                                    <button class="btnz ">ngang 1m x dài 2m x sâu 34cm<span class="showpz">giá: <b>1.150.000₫</b></span></button>
-                                </div>
-                                <div class="col-6">
-                                    <button class="btnz ">ngang 1m x dài 2m x sâu 34cm<span class="showpz">giá: <b>1.150.000₫</b></span></button>
-                                </div>
-                                <div class="col-6">
-                                    <button class="btnz ">ngang 1m x dài 2m x sâu 34cm<span class="showpz">giá: <b>1.150.000₫</b></span></button>
-                                </div>
-                            </div>
-                            <div class="btn-control">
-                                <div>
-                                    <button class="btn-dt dv1">
-                                        <strong>Thêm vào giỏ hàng</strong>
-                                        <small>và tiếp tục mua sắm</small>
-                                    </button>
-                                </div>
-                                <div>
-                                    <button class="btn-dt dv2 color-mn">
-                                        <strong>Mua ngay</strong>
-                                        <small>Giao Hàng Tận Nơi Trên Toàn Quốc</small>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-
+            <div id="check-kt" class="check-kt" onclick="hiden_check_kt()"></div>
         </footer>
     </div>
-    <script src="./jquery.js"></script>
-    <script src="./script-js.js"></script>
-    <script src="./js-sp.js"></script>
     <script type="text/javascript">
         document.getElementById("contents-dt").style.display = "block";
         document.getElementById("footerz-dt").style.display = "block";
-        // window.data = {
-        //     img: "https://anbinhnew.com/wp-content/uploads/2023/04/giuong-sat-thu-dau-mot.jpg",
-        //     title: "Giường sắt, 74 mẫu Giường Sắt Đẹp nhất, Giảm giá tới 40%",
-        //     size: "ngang 1m4 x dài 2m",
-        //     price: 2550000,
-        //     sl: 1,
-        //     url: "https://anbinhnew.com/shop/giuong-sat/"
-        // };
+        window.data = {
+            id:0,
+            attribute_name:'Kích thước',
+            table_price:[
+                {
+                    kt:'1mx2m',
+                    price_og:'1350000',
+                    price_sale:'1250000'
+                },
+                {
+                    kt:'1m2x2m',
+                    price_og:'1550000',
+                    price_sale:'1350000'
+                },
+                {
+                    kt:'1m4x2m',
+                    price_og:'1650000',
+                    price_sale:'1450000'
+                },
+                {
+                    kt:'1m6x2m',
+                    price_og:'1750000',
+                    price_sale:'1550000'
+                },
+                {
+                    kt:'1m8x2m',
+                    price_og:'1850000',
+                    price_sale:'1650000'
+                },
+                {
+                    kt:'2mx2m',
+                    price_og:'1950000',
+                    price_sale:'1750000'
+                },
+            ]
+        };
         // localStorage.setItem("order_2", JSON.stringify(window.data));
     </script>
+    <script src="./jquery.js"></script>
+    <script src="./script-js.js"></script>
+    <script src="./js-sp.js"></script>
+
     <!-- <script type="text/javascript"> document.addEventListener('copy', function (e) { e.preventDefault(); }); document.addEventListener('contextmenu', function (e) { e.preventDefault(); }); </script> -->
 </body>
 
