--- a/src/components/mmo_0/frontend_html/style-detail.css
+++ b/src/components/mmo_0/frontend_html/style-detail.css
@@ -451,6 +451,7 @@ p.danh-price {
     color: #FFEB3B;
 }
 .check-kt {
+    display: none;
     position: fixed;
     width: 100%;
     height: 100vh;
@@ -479,9 +480,6 @@ p.danh-price {
 .img-pp-1>img{
     border: 1px solid #bfb6b6;
     max-width: 289px;
-}
-.active b{
-    color:sandybrown ;
 }
 .dcn>span:nth-child(1){
     color: #145ee1;
@@ -513,4 +511,12 @@ p.danh-price {
 }
 .dv2:hover{
     background-color: #144293;
+}
+.owl-item.active>div {
+    background-color: white;
+}
+.selected-indicator {
+    position: absolute;
+    top: -1px;
+    right: -1px;
 }
