--- a/src/components/mmo_0/frontend_html/detail-v2.html
+++ b/src/components/mmo_0/frontend_html/detail-v2.html
@@ -67,11 +67,9 @@
                 </div>
                 <div class="icon-cart">
                     <a href="#" style="text-decoration: none;">
-                        <div class="wrap-icon-cart">
-                            <!-- <img src="./media/cart.svg"> -->
-                            <span class="icon-cartx" style=" font-size: 30px; "></span>
-                            <span class="gh">Giỏ hàng</span><span class="nuvbe"
-                                style=" top: -9px; left: 31px; ">(0)</span>
+                        <div class="wrap-icon-cart"  onclick="show_cart()">
+                            <span class="icon-cartx" style=" font-size: 30px; position: relative;"><b class="notify" id="cart-1">0</b></span>
+                            <span class="gh">Giỏ hàng</span>
                         </div>
                     </a>
                 </div>
@@ -1140,7 +1138,7 @@
                         </div> -->
                     </div>
                     <div class="col-sm-12 dev-8 col-md-8">
-                        <span class="title-dt">
+                        <span class="title-dt" id="get-tt">
                             Giường sắt đơn hoàng giá rẻ, miễn phí vận chuyển tại Hồ Chí Minh
                         </span>
                         <div class="re rv">
@@ -1398,12 +1396,14 @@
                             class="aml-text-content aml-tooltiptext">Chat với chúng tôi qua Zalo</span></li>
                     <li><a id="lien-he-fb" target="_blank" href="https://m.me/anbinhnewcom" rel="nofollow"
                             onClick="window.value=60000"><span class="icon-mess icon-messenger"></span></a><span
-                            class="aml-text-content aml-tooltiptext">Facebook Messenger</span></li>
+                            class="aml-text-content aml-tooltiptext">Nhắn tin với chúng tôi qua facebook</span></li>
+                    <li onclick="show_cart()"><a id="my-cart" onclick="window.value=60000" ><span class="icon-cartx icon-messenger re"><b class="notify" id="cart-2" >0</b></span></a><span
+                            class="aml-text-content aml-tooltiptext">Giỏ hàng</span></li>
                 </ul>
             </div>
 
             <div id="popup-cart" class="popup-cart">
-                <div class="pp-content">
+                <!-- <div class="pp-content">
                     <div>
                         <span class="header-1">Giỏ hàng</span>
                         <span class="header-2 cs">x</span>
@@ -1446,7 +1446,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="dimer-popup" style=" width: 100%; height: 100%; "></div>
+                <div class="dimer-popup" style=" width: 100%; height: 100%; "></div> -->
             </div>
             <div id="check-kt" class="check-kt" onclick="hiden_check_kt()"></div>
         </footer>
@@ -1493,7 +1493,7 @@
         // localStorage.setItem("order_2", JSON.stringify(window.data));
     </script>
     <script src="./jquery.js"></script>
-    <script src="./script-js.js"></script>
+    <script src="./script-commom.js"></script>
     <script src="./js-sp.js"></script>
 
     <!-- <script type="text/javascript"> document.addEventListener('copy', function (e) { e.preventDefault(); }); document.addEventListener('contextmenu', function (e) { e.preventDefault(); }); </script> -->
